@@ -1,3 +1,8 @@
+2006-10-05  Cedric Gustin  <cedric.gustin@gmail.com>
+
+	* dsextras.py (Template) (TemplateExtension): Add
+	py_ssize_t_clean flag to be passed to codegen.SourceWriter.
+
 2006-10-04  Cedric Gustin  <cedric.gustin@gmail.com>
 
 	* Makefile.am: Add pygobject_postinstall.py to EXTRA_DIST.
